[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "beerpy"
version = "0.2"
authors = [{name = "ASALI", email = "ste.rebu@outlook.it"}]
maintainers = [{name = "Stefano Rebughini", email="ste.rebu@outlook.it"}]
description = "Library to randomly generate beer quotes"
license = {text = "GPL"}
classifiers = [
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8"
]
requires-python = ">=3.7,<=3.12"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Homepage = "https://github.com/srebughini/BEERPY"
Issues = "https://github.com/srebughini/BEERPY/issuess"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]
