[metadata]
name = beerpy
version = file: version.txt
author = ASALI
author_email = ste.rebu@outlook.it
home_page = https://github.com/srebughini/BEERPY
description = Library to randomly generate beer quotes
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Chemical Reactors :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/srebughini/BEERPY/issues

[options]
include_package_data = true
setup_requires =
    setuptools
